@@ -24,6 +24,7 @@ v1.1.0a --> 1.1.x :
 		- fixed small bug in sample_list.
 		- fixed small bug with channel announce of groups.
 		- fixed bug #472 - remove metadata completely when dir is empty.
+		- updated libcopy to include special libs needed on linux for chroot dnslookups
 
 v1.1.0 --> 1.1.0a : (r2414)
 		- stats in announces were broken in v1.1.0, ``hotfix''.
